# ascend-events

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  index.d.ts  package.json  tsconfig.json  tslint.json
src/: event.ts  eventemitter.ts  index.ts
test/: eventemitter.spec.ts
