# package(default_visibility = ["//visibility:public"])

# filegroup(
#     name = "config",
#     srcs = [
#         "package.json",
#         "yarn.lock",
#         "tsconfig.json"
#     ],
# )

# filegroup(
#   name = "source",
#   srcs = [
#     "src/*.ts"
#   ],
#   output_group = "es5_sources",
# )

# load("@npm//@bazel/typescript:index.bzl", "ts_project")

# ts_project(
#     name = "src",
#     deps = [],
#     # glob is a quick way to select all the code,
#     # but has performance penalty in that Bazel must evaluate it.
#     srcs = [
#       ":config",
#       ":source",
#     ],
#     tsconfig = "//:tsconfig.json",
#     output_group = "es5_sources",
# )

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = glob([
      "src/*.ts"
    ]),
)
